--- a/output.css
+++ b/output.css
@@ -604,8 +604,16 @@ video {
   left: -5rem;
 }
 
+.bottom-\[-60px\] {
+  bottom: -60px;
+}
+
 .left-\[-10px\] {
   left: -10px;
+}
+
+.left-\[10\%\] {
+  left: 10%;
 }
 
 .right-0 {
@@ -640,44 +648,28 @@ video {
   bottom: 0px;
 }
 
-.bottom-\[0\] {
-  bottom: 0;
-}
-
-.bottom-\[-10px\] {
-  bottom: -10px;
-}
-
-.bottom-\[-50\%\] {
-  bottom: -50%;
-}
-
-.bottom-\[-10\%\] {
-  bottom: -10%;
-}
-
-.bottom-\[-50px\] {
-  bottom: -50px;
+.-top-8 {
+  top: -2rem;
 }
 
 .left-0 {
   left: 0px;
 }
 
-.left-\[50\%\] {
-  left: 50%;
+.left-\[16px\] {
+  left: 16px;
 }
 
-.left-\[15\%\] {
-  left: 15%;
+.bottom-\[16\] {
+  bottom: 16;
 }
 
-.left-\[10\%\] {
-  left: 10%;
+.bottom-\[16px\] {
+  bottom: 16px;
 }
 
-.bottom-\[-60px\] {
-  bottom: -60px;
+.bottom-\[14px\] {
+  bottom: 14px;
 }
 
 .z-20 {
@@ -688,12 +680,8 @@ video {
   z-index: 30;
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
-}
-
-.m-0 {
-  margin: 0px;
+.z-10 {
+  z-index: 10;
 }
 
 .mx-auto {
@@ -711,9 +699,8 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.mx-0 {
-  margin-left: 0px;
-  margin-right: 0px;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .mb-4 {
@@ -744,6 +731,10 @@ video {
   margin-top: 0.25rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -768,8 +759,12 @@ video {
   margin-top: 2rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
+.box-border {
+  box-sizing: border-box;
 }
 
 .block {
@@ -825,6 +820,46 @@ video {
   height: 100vh;
 }
 
+.h-\[200px\] {
+  height: 200px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
+.h-\[220px\] {
+  height: 220px;
+}
+
+.h-\[230px\] {
+  height: 230px;
+}
+
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[70px\] {
+  height: 70px;
+}
+
+.h-\[270px\] {
+  height: 270px;
+}
+
+.h-\[80px\] {
+  height: 80px;
+}
+
+.h-\[300px\] {
+  height: 300px;
+}
+
+.min-h-\[220px\] {
+  min-height: 220px;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -843,6 +878,10 @@ video {
 
 .w-\[135px\] {
   width: 135px;
+}
+
+.w-\[300px\] {
+  width: 300px;
 }
 
 .w-\[33\%\] {
@@ -865,32 +904,53 @@ video {
   width: 100%;
 }
 
-.w-\[7xl\] {
-  width: 7xl;
+.w-\[150px\] {
+  width: 150px;
 }
 
-.w-\[70\%\] {
-  width: 70%;
+.w-\[240px\] {
+  width: 240px;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.w-\[250px\] {
+  width: 250px;
 }
 
-.w-\[300px\] {
-  width: 300px;
+.w-\[218px\] {
+  width: 218px;
+}
+
+.w-\[216px\] {
+  width: 216px;
+}
+
+.w-\[214px\] {
+  width: 214px;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.min-w-\[\] {
+  min-width: ;
+}
+
+.min-w-\[200\] {
+  min-width: 200;
+}
+
+.min-w-\[200px\] {
+  min-width: 200px;
+}
+
+.min-w-\[250px\] {
+  min-width: 250px;
 }
 
 .max-w-2xl {
   max-width: 42rem;
-}
-
-.max-w-7xl {
-  max-width: 80rem;
-}
-
-.max-w-\[16rem\] {
-  max-width: 16rem;
 }
 
 .max-w-\[636px\] {
@@ -899,14 +959,6 @@ video {
 
 .max-w-\[800px\] {
   max-width: 800px;
-}
-
-.max-w-5xl {
-  max-width: 64rem;
-}
-
-.max-w-6xl {
-  max-width: 72rem;
 }
 
 .transform {
@@ -929,6 +981,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .place-items-center {
   place-items: center;
 }
@@ -941,12 +997,32 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-center {
   justify-content: center;
 }
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.justify-items-start {
+  justify-items: start;
+}
+
+.justify-items-center {
+  justify-items: center;
 }
 
 .gap-1 {
@@ -971,6 +1047,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-\[10px\] {
+  gap: 10px;
 }
 
 .gap-y-4 {
@@ -1037,6 +1117,22 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-\[24px\] {
+  border-radius: 24px;
+}
+
+.rounded-\[14px\] {
+  border-radius: 14px;
+}
+
+.rounded-\[15px\] {
+  border-radius: 15px;
+}
+
+.rounded-\[30px\] {
+  border-radius: 30px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1047,6 +1143,10 @@ video {
 
 .border-\[3px\] {
   border-width: 3px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-r-0 {
@@ -1102,6 +1202,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1123,10 +1228,6 @@ video {
   padding: 0.5rem;
 }
 
-.p-20 {
-  padding: 5rem;
-}
-
 .p-3 {
   padding: 0.75rem;
 }
@@ -1135,8 +1236,8 @@ video {
   padding: 1.25rem;
 }
 
-.p-\[100px\] {
-  padding: 100px;
+.p-4 {
+  padding: 1rem;
 }
 
 .px-1 {
@@ -1179,6 +1280,11 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -1187,6 +1293,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .py-3 {
@@ -1217,21 +1328,6 @@ video {
 .py-\[10px\] {
   padding-top: 10px;
   padding-bottom: 10px;
-}
-
-.py-\[100px\] {
-  padding-top: 100px;
-  padding-bottom: 100px;
-}
-
-.py-10 {
-  padding-top: 2.5rem;
-  padding-bottom: 2.5rem;
-}
-
-.py-20 {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 
 .pb-10 {
@@ -1422,8 +1518,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-\[mainDarkPurple\] {
+  color: mainDarkPurple;
+}
+
 .text-\[\] {
   color: ;
+}
+
+.text-\[mainLightPurpleText\] {
+  color: mainLightPurpleText;
 }
 
 .outline-none {
@@ -1668,6 +1772,10 @@ nav{
 }
 
 @media (min-width: 640px) {
+  .sm\:-top-10 {
+    top: -2.5rem;
+  }
+
   .sm\:mx-4 {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -1685,6 +1793,10 @@ nav{
     display: grid;
   }
 
+  .sm\:h-\[230px\] {
+    height: 230px;
+  }
+
   .sm\:w-fit {
     width: -moz-fit-content;
     width: fit-content;
@@ -1692,6 +1804,10 @@ nav{
 
   .sm\:w-full {
     width: 100%;
+  }
+
+  .sm\:w-\[240px\] {
+    width: 240px;
   }
 
   .sm\:max-w-\[120px\] {
@@ -1702,16 +1818,28 @@ nav{
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
-  .sm\:place-items-center {
-    place-items: center;
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:justify-between {
     justify-content: space-between;
   }
 
+  .sm\:gap-\[20px\] {
+    gap: 20px;
+  }
+
+  .sm\:rounded-\[30px\] {
+    border-radius: 30px;
+  }
+
   .sm\:p-6 {
     padding: 1.5rem;
+  }
+
+  .sm\:p-4 {
+    padding: 1rem;
   }
 
   .sm\:px-8 {
@@ -1722,10 +1850,6 @@ nav{
   .sm\:py-10 {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
-  }
-
-  .sm\:text-center {
-    text-align: center;
   }
 
   .sm\:text-2xl {
@@ -1756,10 +1880,6 @@ nav{
 }
 
 @media (min-width: 768px) {
-  .md\:absolute {
-    position: absolute;
-  }
-
   .md\:left-\[-10px\] {
     left: -10px;
   }
@@ -1779,6 +1899,10 @@ nav{
 
   .md\:flex {
     display: flex;
+  }
+
+  .md\:h-\[250px\] {
+    height: 250px;
   }
 
   .md\:w-\[124px\] {
@@ -1802,20 +1926,12 @@ nav{
     width: fit-content;
   }
 
-  .md\:w-\[25\%\] {
-    width: 25%;
-  }
-
-  .md\:max-w-\[20\%\] {
-    max-width: 20%;
-  }
-
-  .md\:max-w-\[25\%\] {
-    max-width: 25%;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -1830,38 +1946,17 @@ nav{
     justify-content: flex-start;
   }
 
+  .md\:gap-\[24px\] {
+    gap: 24px;
+  }
+
   .md\:p-4 {
     padding: 1rem;
-  }
-
-  .md\:px-12 {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
-  .md\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
   }
 
   .md\:py-\[13px\] {
     padding-top: 13px;
     padding-bottom: 13px;
-  }
-
-  .md\:py-6 {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
-  .md\:px-10 {
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-
-  .md\:px-11 {
-    padding-left: 2.75rem;
-    padding-right: 2.75rem;
   }
 
   .md\:text-2xl {
@@ -1877,6 +1972,10 @@ nav{
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-\[22px\] {
+    font-size: 22px;
   }
 
   .md\:text-\[32px\] {
@@ -1906,10 +2005,6 @@ nav{
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-
-  .md\:text-\[22px\] {
-    font-size: 22px;
-  }
 }
 
 @media (min-width: 1024px) {
@@ -1919,10 +2014,6 @@ nav{
 
   .lg\:absolute {
     position: absolute;
-  }
-
-  .lg\:top-16 {
-    top: 4rem;
   }
 
   .lg\:top-\[-10px\] {
@@ -1959,6 +2050,10 @@ nav{
     width: 185px;
   }
 
+  .lg\:w-\[25\%\] {
+    width: 25%;
+  }
+
   .lg\:w-\[40\%\] {
     width: 40%;
   }
@@ -1978,10 +2073,6 @@ nav{
   .lg\:w-max {
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .lg\:w-\[25\%\] {
-    width: 25%;
   }
 
   .lg\:max-w-\[1000px\] {
@@ -2008,12 +2099,12 @@ nav{
     align-items: center;
   }
 
-  .lg\:gap-3 {
-    gap: 0.75rem;
-  }
-
   .lg\:gap-0 {
     gap: 0px;
+  }
+
+  .lg\:gap-3 {
+    gap: 0.75rem;
   }
 
   .lg\:rounded-none {
@@ -2033,11 +2124,6 @@ nav{
     padding-right: 2.5rem;
   }
 
-  .lg\:px-4 {
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
   .lg\:py-\[100px\] {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -2052,6 +2138,10 @@ nav{
     line-height: 1;
   }
 
+  .lg\:text-\[32px\] {
+    font-size: 32px;
+  }
+
   .lg\:text-\[42px\] {
     font-size: 42px;
   }
@@ -2060,19 +2150,15 @@ nav{
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
-
-  .lg\:text-\[32px\] {
-    font-size: 32px;
-  }
 }
 
 @media (min-width: 1280px) {
-  .xl\:max-w-\[20rem\] {
-    max-width: 20rem;
+  .xl\:grid {
+    display: grid;
   }
 
-  .xl\:max-w-\[20\%\] {
-    max-width: 20%;
+  .xl\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
