--- a/output.css
+++ b/output.css
@@ -604,6 +604,10 @@ video {
   left: -5rem;
 }
 
+.bottom-\[-40px\] {
+  bottom: -40px;
+}
+
 .bottom-\[-60px\] {
   bottom: -60px;
 }
@@ -652,14 +656,6 @@ video {
   top: 100%;
 }
 
-.bottom-\[-20px\] {
-  bottom: -20px;
-}
-
-.bottom-\[-40px\] {
-  bottom: -40px;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -681,6 +677,11 @@ video {
   margin-right: auto;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .my-20 {
   margin-top: 5rem;
   margin-bottom: 5rem;
@@ -696,13 +697,12 @@ video {
   margin-bottom: 1.25rem;
 }
 
-.my-10 {
-  margin-top: 2.5rem;
+.mb-10 {
   margin-bottom: 2.5rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-3 {
@@ -715,6 +715,10 @@ video {
 
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.mb-\[24px\] {
+  margin-bottom: 24px;
 }
 
 .ml-1 {
@@ -773,23 +777,28 @@ video {
   margin-top: 2rem;
 }
 
-.mb-\[24px\] {
-  margin-bottom: 24px;
+.mt-\[300px\] {
+  margin-top: 300px;
 }
 
 .mt-\[30px\] {
   margin-top: 30px;
 }
 
-.box-border {
-  box-sizing: border-box;
+.mt-\[200px\] {
+  margin-top: 200px;
 }
 
-.line-clamp-2 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
+.mt-\[150px\] {
+  margin-top: 150px;
+}
+
+.box-border {
+  box-sizing: border-box;
 }
 
 .block {
@@ -812,10 +821,6 @@ video {
   display: none;
 }
 
-.aspect-\[16\/9\] {
-  aspect-ratio: 16/9;
-}
-
 .h-12 {
   height: 3rem;
 }
@@ -830,6 +835,10 @@ video {
 
 .h-\[120px\] {
   height: 120px;
+}
+
+.h-\[220px\] {
+  height: 220px;
 }
 
 .h-\[250px\] {
@@ -869,28 +878,12 @@ video {
   height: 100vh;
 }
 
-.h-\[32px\] {
-  height: 32px;
+.h-2 {
+  height: 0.5rem;
 }
 
-.h-\[220px\] {
-  height: 220px;
-}
-
-.max-h-\[300px\] {
-  max-height: 300px;
-}
-
-.max-h-\[250px\] {
-  max-height: 250px;
-}
-
-.max-h-\[200px\] {
-  max-height: 200px;
-}
-
-.min-h-\[56px\] {
-  min-height: 56px;
+.h-6 {
+  height: 1.5rem;
 }
 
 .w-12 {
@@ -933,6 +926,10 @@ video {
   width: 250px;
 }
 
+.w-\[30\%\] {
+  width: 30%;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
@@ -949,6 +946,10 @@ video {
   width: 55px;
 }
 
+.w-\[65\%\] {
+  width: 65%;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
@@ -957,12 +958,20 @@ video {
   width: 100%;
 }
 
-.w-\[200px\] {
-  width: 200px;
+.w-10\/12 {
+  width: 83.333333%;
 }
 
-.w-\[414px\] {
-  width: 414px;
+.w-\[80\] {
+  width: 80;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-\[90\%\] {
+  width: 90%;
 }
 
 .max-w-2xl {
@@ -973,12 +982,12 @@ video {
   max-width: 636px;
 }
 
-.max-w-\[800px\] {
-  max-width: 800px;
-}
-
 .max-w-\[700px\] {
   max-width: 700px;
+}
+
+.max-w-\[800px\] {
+  max-width: 800px;
 }
 
 .transform {
@@ -989,8 +998,10 @@ video {
   cursor: pointer;
 }
 
-.cursor-default {
-  cursor: default;
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .auto-rows-fr {
@@ -999,6 +1010,10 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -1037,6 +1052,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -1053,12 +1072,13 @@ video {
   gap: 8px;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
 .gap-y-4 {
   row-gap: 1rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1127,6 +1147,10 @@ video {
   border-radius: 60px;
 }
 
+.rounded-\[7px\] {
+  border-radius: 7px;
+}
+
 .rounded-\[8px\] {
   border-radius: 8px;
 }
@@ -1143,10 +1167,6 @@ video {
   border-radius: 0.75rem;
 }
 
-.rounded-\[7px\] {
-  border-radius: 7px;
-}
-
 .border {
   border-width: 1px;
 }
@@ -1159,16 +1179,20 @@ video {
   border-width: 1px;
 }
 
-.border-\[3px\] {
-  border-width: 3px;
-}
-
 .border-\[2px\] {
   border-width: 2px;
 }
 
+.border-\[3px\] {
+  border-width: 3px;
+}
+
 .border-r-0 {
   border-right-width: 0px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-solid {
@@ -1213,6 +1237,11 @@ video {
   border-color: ;
 }
 
+.border-\[\#8b8b9a\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(139 139 154 / var(--tw-border-opacity, 1));
+}
+
 .bg-\[\#996BE4\] {
   --tw-bg-opacity: 1;
   background-color: rgb(153 107 228 / var(--tw-bg-opacity, 1));
@@ -1226,6 +1255,11 @@ video {
 .bg-\[\#D1D5DB\] {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#F5F5F5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity, 1));
 }
 
 .bg-\[\#FAF4FF\] {
@@ -1253,17 +1287,31 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[mainLightPurple\] {
+  background-color: mainLightPurple;
+}
+
+.bg-\[\#2bc48a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 196 138 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#f8f8fa\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 248 250 / var(--tw-bg-opacity, 1));
+}
+
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\] {
   background-color: ;
 }
 
-.bg-auto {
-  background-size: auto;
-}
-
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
+.bg-\[\#4a84bf26\] {
+  background-color: #4a84bf26;
 }
 
 .object-cover {
@@ -1303,6 +1351,10 @@ video {
   padding: 1.5rem;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -1311,6 +1363,11 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -1398,11 +1455,6 @@ video {
   padding-bottom: 10px;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1415,12 +1467,8 @@ video {
   padding-top: 100px;
 }
 
-.pb-\[\.56rem\] {
-  padding-bottom: .56rem;
-}
-
-.pt-\[\.56rem\] {
-  padding-top: .56rem;
+.pr-0 {
+  padding-right: 0px;
 }
 
 .text-left {
@@ -1435,6 +1483,10 @@ video {
   text-align: start;
 }
 
+.text-end {
+  text-align: end;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1443,6 +1495,11 @@ video {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-\[10px\] {
@@ -1490,6 +1547,11 @@ video {
   line-height: 1rem;
 }
 
+.\!text-5xl {
+  font-size: 3rem !important;
+  line-height: 1 !important;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1504,10 +1566,6 @@ video {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.leading-\[24px\] {
-  line-height: 24px;
 }
 
 .tracking-\[0\.1px\] {
@@ -1525,6 +1583,11 @@ video {
 .text-\[\#00B090\] {
   --tw-text-opacity: 1;
   color: rgb(0 176 144 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#212529\] {
+  --tw-text-opacity: 1;
+  color: rgb(33 37 41 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#300B60\] {
@@ -1612,6 +1675,32 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#8b8b9a\] {
+  --tw-text-opacity: 1;
+  color: rgb(139 139 154 / var(--tw-text-opacity, 1));
+}
+
+.text-\[mainLightPurple\] {
+  color: mainLightPurple;
+}
+
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#285a70\] {
+  --tw-text-opacity: 1;
+  color: rgb(40 90 112 / var(--tw-text-opacity, 1));
+}
+
+.accent-\[mainLightPurple\] {
+  accent-color: mainLightPurple;
+}
+
+.accent-\[\#A271F2\] {
+  accent-color: #A271F2;
+}
+
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
@@ -1621,6 +1710,10 @@ video {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition {
@@ -1651,16 +1744,8 @@ video {
   transition-duration: 500ms;
 }
 
-.duration-200 {
-  transition-duration: 200ms;
-}
-
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
-.ease-in {
-  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .container{
@@ -1855,15 +1940,6 @@ nav{
   color: rgb(148 163 184 / var(--tw-text-opacity, 1));
 }
 
-.hover\:border-\[\]:hover {
-  border-color: ;
-}
-
-.hover\:border-\[\#A271F2\]:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(162 113 242 / var(--tw-border-opacity, 1));
-}
-
 .hover\:border-\[\#6938b8\]:hover {
   --tw-border-opacity: 1;
   border-color: rgb(105 56 184 / var(--tw-border-opacity, 1));
@@ -1889,10 +1965,6 @@ nav{
   background-color: rgb(124 58 237 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-\[\]:hover {
-  background-color: ;
-}
-
 .hover\:shadow-lg:hover {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1914,10 +1986,6 @@ nav{
   background-color: rgb(92 45 167 / var(--tw-bg-opacity, 1));
 }
 
-.active\:bg-\[\]:active {
-  background-color: ;
-}
-
 @media (min-width: 640px) {
   .sm\:mx-4 {
     margin-left: 1rem;
@@ -1930,6 +1998,10 @@ nav{
 
   .sm\:mt-6 {
     margin-top: 1.5rem;
+  }
+
+  .sm\:mb-4 {
+    margin-bottom: 1rem;
   }
 
   .sm\:grid {
@@ -2016,12 +2088,20 @@ nav{
     margin-bottom: 153px;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:flex {
     display: flex;
   }
 
   .md\:h-\[240px\] {
     height: 240px;
+  }
+
+  .md\:h-8 {
+    height: 2rem;
   }
 
   .md\:w-\[124px\] {
@@ -2045,12 +2125,20 @@ nav{
     width: fit-content;
   }
 
-  .md\:w-\[50\%\] {
-    width: 50%;
+  .md\:w-full {
+    width: 100%;
   }
 
-  .md\:min-w-\[414px\] {
-    min-width: 414px;
+  .md\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .md\:w-\[65\%\] {
+    width: 65%;
+  }
+
+  .md\:w-8 {
+    width: 2rem;
   }
 
   .md\:grid-cols-2 {
@@ -2061,12 +2149,25 @@ nav{
     flex-direction: row;
   }
 
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
   .md\:items-center {
     align-items: center;
   }
 
   .md\:justify-start {
     justify-content: flex-start;
+  }
+
+  .md\:gap-0 {
+    gap: 0px;
+  }
+
+  .md\:gap-x-0 {
+    -moz-column-gap: 0px;
+         column-gap: 0px;
   }
 
   .md\:p-4 {
@@ -2076,6 +2177,10 @@ nav{
   .md\:py-\[13px\] {
     padding-top: 13px;
     padding-bottom: 13px;
+  }
+
+  .md\:pr-4 {
+    padding-right: 1rem;
   }
 
   .md\:text-2xl {
@@ -2196,6 +2301,14 @@ nav{
   .lg\:w-max {
     width: -moz-max-content;
     width: max-content;
+  }
+
+  .lg\:w-\[65\%\] {
+    width: 65%;
+  }
+
+  .lg\:w-\[30\%\] {
+    width: 30%;
   }
 
   .lg\:max-w-\[1000px\] {
