--- a/output.css
+++ b/output.css
@@ -588,6 +588,22 @@ video {
   }
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .fixed {
   position: fixed;
 }
@@ -654,6 +670,14 @@ video {
 
 .top-full {
   top: 100%;
+}
+
+.left-2\/4 {
+  left: 50%;
+}
+
+.top-2\/4 {
+  top: 50%;
 }
 
 .z-10 {
@@ -777,24 +801,24 @@ video {
   margin-top: 2rem;
 }
 
-.mt-\[300px\] {
-  margin-top: 300px;
+.mt-\[150px\] {
+  margin-top: 150px;
 }
 
 .mt-\[30px\] {
   margin-top: 30px;
 }
 
-.mt-\[200px\] {
-  margin-top: 200px;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
-.mt-\[100px\] {
-  margin-top: 100px;
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 
-.mt-\[150px\] {
-  margin-top: 150px;
+.mt-px {
+  margin-top: 1px;
 }
 
 .box-border {
@@ -827,6 +851,14 @@ video {
 
 .h-14 {
   height: 3.5rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-8 {
@@ -878,12 +910,12 @@ video {
   height: 100vh;
 }
 
-.h-2 {
-  height: 0.5rem;
+.h-3\.5 {
+  height: 0.875rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-5 {
+  height: 1.25rem;
 }
 
 .w-12 {
@@ -906,6 +938,10 @@ video {
   width: 1rem;
 }
 
+.w-6 {
+  width: 1.5rem;
+}
+
 .w-8 {
   width: 2rem;
 }
@@ -926,10 +962,6 @@ video {
   width: 250px;
 }
 
-.w-\[30\%\] {
-  width: 30%;
-}
-
 .w-\[300px\] {
   width: 300px;
 }
@@ -946,10 +978,6 @@ video {
   width: 55px;
 }
 
-.w-\[65\%\] {
-  width: 65%;
-}
-
 .w-\[80\%\] {
   width: 80%;
 }
@@ -958,20 +986,20 @@ video {
   width: 100%;
 }
 
-.w-10\/12 {
-  width: 83.333333%;
+.w-11 {
+  width: 2.75rem;
 }
 
-.w-\[80\] {
-  width: 80;
+.w-3\/4 {
+  width: 75%;
 }
 
-.w-6 {
-  width: 1.5rem;
+.w-3\.5 {
+  width: 0.875rem;
 }
 
-.w-\[90\%\] {
-  width: 90%;
+.w-5 {
+  width: 1.25rem;
 }
 
 .max-w-2xl {
@@ -990,12 +1018,32 @@ video {
   max-width: 800px;
 }
 
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.-translate-x-2\/4 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-2\/4 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .appearance-none {
@@ -1012,8 +1060,8 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.flex-row {
-  flex-direction: row;
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1076,9 +1124,9 @@ video {
   row-gap: 1rem;
 }
 
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1167,6 +1215,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1233,13 +1285,18 @@ video {
   border-color: rgb(226 232 240 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\] {
-  border-color: ;
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity, 1));
 }
 
-.border-\[\#8b8b9a\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(139 139 154 / var(--tw-border-opacity, 1));
+.bg-\[\#2bc48a\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 196 138 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#4a84bf26\] {
+  background-color: #4a84bf26;
 }
 
 .bg-\[\#996BE4\] {
@@ -1277,28 +1334,14 @@ video {
   background-color: rgb(238 238 238 / var(--tw-bg-opacity, 1));
 }
 
-.bg-blue-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[mainLightPurple\] {
-  background-color: mainLightPurple;
-}
-
-.bg-\[\#2bc48a\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 196 138 / var(--tw-bg-opacity, 1));
-}
-
 .bg-\[\#f8f8fa\] {
   --tw-bg-opacity: 1;
   background-color: rgb(248 248 250 / var(--tw-bg-opacity, 1));
+}
+
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity, 1));
 }
 
 .bg-gray-200 {
@@ -1306,12 +1349,13 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\] {
-  background-color: ;
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-\[\#4a84bf26\] {
-  background-color: #4a84bf26;
+.bg-\[\] {
+  background-color: ;
 }
 
 .object-cover {
@@ -1467,10 +1511,6 @@ video {
   padding-top: 100px;
 }
 
-.pr-0 {
-  padding-right: 0px;
-}
-
 .text-left {
   text-align: left;
 }
@@ -1481,10 +1521,6 @@ video {
 
 .text-start {
   text-align: start;
-}
-
-.text-end {
-  text-align: end;
 }
 
 .text-2xl {
@@ -1547,11 +1583,6 @@ video {
   line-height: 1rem;
 }
 
-.\!text-5xl {
-  font-size: 3rem !important;
-  line-height: 1 !important;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1590,6 +1621,11 @@ video {
   color: rgb(33 37 41 / var(--tw-text-opacity, 1));
 }
 
+.text-\[\#285a70\] {
+  --tw-text-opacity: 1;
+  color: rgb(40 90 112 / var(--tw-text-opacity, 1));
+}
+
 .text-\[\#300B60\] {
   --tw-text-opacity: 1;
   color: rgb(48 11 96 / var(--tw-text-opacity, 1));
@@ -1618,6 +1654,11 @@ video {
 .text-\[\#7427AB\] {
   --tw-text-opacity: 1;
   color: rgb(116 39 171 / var(--tw-text-opacity, 1));
+}
+
+.text-\[\#8b8b9a\] {
+  --tw-text-opacity: 1;
+  color: rgb(139 139 154 / var(--tw-text-opacity, 1));
 }
 
 .text-\[\#A271F2\] {
@@ -1675,35 +1716,41 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-\[\#8b8b9a\] {
+.text-gray-900 {
   --tw-text-opacity: 1;
-  color: rgb(139 139 154 / var(--tw-text-opacity, 1));
+  color: rgb(17 24 39 / var(--tw-text-opacity, 1));
 }
 
-.text-\[mainLightPurple\] {
-  color: mainLightPurple;
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
+}
+
+.text-\[blue-600\] {
+  color: blue-600;
 }
 
 .text-\[\] {
   color: ;
 }
 
-.text-\[\#285a70\] {
-  --tw-text-opacity: 1;
-  color: rgb(40 90 112 / var(--tw-text-opacity, 1));
-}
-
-.accent-\[mainLightPurple\] {
-  accent-color: mainLightPurple;
-}
-
 .accent-\[\#A271F2\] {
   accent-color: #A271F2;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1736,11 +1783,21 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
 
 .duration-\[500ms\] {
+  transition-duration: 500ms;
+}
+
+.duration-500 {
   transition-duration: 500ms;
 }
 
@@ -1940,6 +1997,139 @@ nav{
   color: rgb(148 163 184 / var(--tw-text-opacity, 1));
 }
 
+.before\:absolute::before {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.before\:left-2\/4::before {
+  content: var(--tw-content);
+  left: 50%;
+}
+
+.before\:top-2\/4::before {
+  content: var(--tw-content);
+  top: 50%;
+}
+
+.before\:block::before {
+  content: var(--tw-content);
+  display: block;
+}
+
+.before\:h-8::before {
+  content: var(--tw-content);
+  height: 2rem;
+}
+
+.before\:w-8::before {
+  content: var(--tw-content);
+  width: 2rem;
+}
+
+.before\:-translate-x-2\/4::before {
+  content: var(--tw-content);
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:-translate-y-2\/4::before {
+  content: var(--tw-content);
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.before\:rounded-full::before {
+  content: var(--tw-content);
+  border-radius: 9999px;
+}
+
+.before\:opacity-0::before {
+  content: var(--tw-content);
+  opacity: 0;
+}
+
+.before\:transition-opacity::before {
+  content: var(--tw-content);
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:right-\[22px\]::after {
+  content: var(--tw-content);
+  right: 22px;
+}
+
+.after\:top-0\.5::after {
+  content: var(--tw-content);
+  top: 0.125rem;
+}
+
+.after\:left-\[2px\]::after {
+  content: var(--tw-content);
+  left: 2px;
+}
+
+.after\:top-\[2px\]::after {
+  content: var(--tw-content);
+  top: 2px;
+}
+
+.after\:h-5::after {
+  content: var(--tw-content);
+  height: 1.25rem;
+}
+
+.after\:w-5::after {
+  content: var(--tw-content);
+  width: 1.25rem;
+}
+
+.after\:rounded-full::after {
+  content: var(--tw-content);
+  border-radius: 9999px;
+}
+
+.after\:border::after {
+  content: var(--tw-content);
+  border-width: 1px;
+}
+
+.after\:border-gray-300::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
+.after\:bg-white::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.after\:transition-all::after {
+  content: var(--tw-content);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.after\:duration-300::after {
+  content: var(--tw-content);
+  transition-duration: 300ms;
+}
+
+.after\:content-\[\'\'\]::after {
+  --tw-content: '';
+  content: var(--tw-content);
+}
+
 .hover\:border-\[\#6938b8\]:hover {
   --tw-border-opacity: 1;
   border-color: rgb(105 56 184 / var(--tw-border-opacity, 1));
@@ -1971,9 +2161,36 @@ nav{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.hover\:before\:opacity-40:hover::before {
+  content: var(--tw-content);
+  opacity: 0.4;
+}
+
+.focus\:border-blue-500:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.focus\:ring-2:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-0:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus\:ring-blue-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity, 1));
 }
 
 .active\:bg-\[\#300B60\]:active {
@@ -1984,6 +2201,52 @@ nav{
 .active\:bg-\[\#5c2da7\]:active {
   --tw-bg-opacity: 1;
   background-color: rgb(92 45 167 / var(--tw-bg-opacity, 1));
+}
+
+.peer:checked ~ .peer-checked\:bg-blue-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
+}
+
+.peer:checked ~ .peer-checked\:bg-\[mainLightPurple\] {
+  background-color: mainLightPurple;
+}
+
+.peer:checked ~ .peer-checked\:bg-\[\#A271F2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(162 113 242 / var(--tw-bg-opacity, 1));
+}
+
+.peer:checked ~ .peer-checked\:opacity-100 {
+  opacity: 1;
+}
+
+.peer:checked ~ .peer-checked\:after\:translate-x-full::after {
+  content: var(--tw-content);
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.peer:checked ~ .peer-checked\:after\:border-white::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.peer:focus ~ .peer-focus\:outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.peer:focus ~ .peer-focus\:ring-4 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.peer:focus ~ .peer-focus\:ring-blue-300 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity, 1));
 }
 
 @media (min-width: 640px) {
@@ -1998,10 +2261,6 @@ nav{
 
   .sm\:mt-6 {
     margin-top: 1.5rem;
-  }
-
-  .sm\:mb-4 {
-    margin-bottom: 1rem;
   }
 
   .sm\:grid {
@@ -2084,24 +2343,28 @@ nav{
     margin-right: 1.5rem;
   }
 
-  .md\:mb-\[153px\] {
-    margin-bottom: 153px;
-  }
-
   .md\:mb-0 {
     margin-bottom: 0px;
+  }
+
+  .md\:mb-\[153px\] {
+    margin-bottom: 153px;
   }
 
   .md\:flex {
     display: flex;
   }
 
+  .md\:h-8 {
+    height: 2rem;
+  }
+
   .md\:h-\[240px\] {
     height: 240px;
   }
 
-  .md\:h-8 {
-    height: 2rem;
+  .md\:w-8 {
+    width: 2rem;
   }
 
   .md\:w-\[124px\] {
@@ -2125,32 +2388,12 @@ nav{
     width: fit-content;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
-  .md\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .md\:w-\[65\%\] {
-    width: 65%;
-  }
-
-  .md\:w-8 {
-    width: 2rem;
-  }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
     flex-direction: row;
-  }
-
-  .md\:flex-col {
-    flex-direction: column;
   }
 
   .md\:items-center {
@@ -2161,15 +2404,6 @@ nav{
     justify-content: flex-start;
   }
 
-  .md\:gap-0 {
-    gap: 0px;
-  }
-
-  .md\:gap-x-0 {
-    -moz-column-gap: 0px;
-         column-gap: 0px;
-  }
-
   .md\:p-4 {
     padding: 1rem;
   }
@@ -2177,10 +2411,6 @@ nav{
   .md\:py-\[13px\] {
     padding-top: 13px;
     padding-bottom: 13px;
-  }
-
-  .md\:pr-4 {
-    padding-right: 1rem;
   }
 
   .md\:text-2xl {
@@ -2282,6 +2512,10 @@ nav{
     width: 25%;
   }
 
+  .lg\:w-\[30\%\] {
+    width: 30%;
+  }
+
   .lg\:w-\[40\%\] {
     width: 40%;
   }
@@ -2294,6 +2528,10 @@ nav{
     width: 60%;
   }
 
+  .lg\:w-\[65\%\] {
+    width: 65%;
+  }
+
   .lg\:w-\[800px\] {
     width: 800px;
   }
@@ -2301,14 +2539,6 @@ nav{
   .lg\:w-max {
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .lg\:w-\[65\%\] {
-    width: 65%;
-  }
-
-  .lg\:w-\[30\%\] {
-    width: 30%;
   }
 
   .lg\:max-w-\[1000px\] {
@@ -2387,6 +2617,10 @@ nav{
 @media (min-width: 1280px) {
   .xl\:h-\[380px\] {
     height: 380px;
+  }
+
+  .xl\:items-center {
+    align-items: center;
   }
 }
 
